feat: Introduce Almacen Service with SQLDelight and Ktor
This commit introduces a new `almacen-service` module, a standalone service for managing inventory data.

Key changes:

-   **Service Setup:**
    -   Created `almacen-service` module, including build configuration, main application file and resource files.
    -   Configured Ktor as web server for the service.
    -   Set up dependency injection using Koin.
-   **Database Integration:**
    -   Implemented database schema and entity definition with SQLDelight.
    -   Added `AlmacenDbRepository` for database interactions.
-   **Routing and API:**
    -   Implemented `Routing` module for handling different HTTP methods and server-sent events (SSE).
    -   Defined API endpoints for creating, reading, updating, and deleting `AlmacenEntity`.
    -   Integrated `Resources` plugin for typed routing.
-   **Serialization:**
    -   Configured JSON serialization.
-   **Dependencies:**
    -   Updated `libs.versions.toml` to use `koin-test-junit4` instead of `koin-test-junit`.
    -   Added `logback` and other necessary dependencies.
-   **Data Models:**
    -   Defined data models (`AlmacenModel`, `AlmacenEntity`) and implemented data conversion logic.
-   **Logging:**
    -   Configured `logback` to log the service actions.
-   **Configuration:**
    -   Added an `application.conf` file to configure the Ktor server and database settings.
-   **Functionalities:**
    -   Implemented insert, select, update, delete, and getAll functions for the `AlmacenEntity`.
    -   Implemented data flow to update database changes on SSE.
    -   Implemented resources for handling different HTTP requests.

Signed-off-by: cocot3ro <pablooterocastro15@gmail.com>

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -40,7 +40,7 @@ koin-bom = { module = "io.insert-koin:koin-bom", version.ref = "koin" }
 koin-ktor = { module = "io.insert-koin:koin-ktor" }
 koin-logger-slf4j = { module = "io.insert-koin:koin-logger-slf4j" }
 koin-test = { module = "io.insert-koin:koin-test" }
-koin-test-junit = { module = "io.insert-koin:koin-test-junit" }
+koin-test-junit = { module = "io.insert-koin:koin-test-junit4" }
 
 sqldelight-sqlite-driver = { module = "app.cash.sqldelight:sqlite-driver", version.ref = "sqldelight" }
 sqldelight-primitive-adapters = { module = "app.cash.sqldelight:primitive-adapters", version.ref = "sqldelight" }
