Refactor: Move package `gh_almacen` to `gh.almacen`
Downgrade gradle wrapper version from 8.13 to 8.11.1

Update dependencies

Signed-off-by: cocot3ro <pablooterocastro15@gmail.com>

--- a/almacen-service/src/main/resources/application.conf
+++ b/almacen-service/src/main/resources/application.conf
@@ -1,6 +1,6 @@
 ktor {
   application {
-    modules = [com.cocot3ro.gh_almacen.ApplicationKt.module]
+    modules = [com.cocot3ro.gh.almacen.ApplicationKt.module]
   }
 
   deployment {
