-   Introduce `databaseModule` for Koin dependency injection of database components. -   Add `DatabaseConstants` to store database-related constants like the database file name. -   Update `configureFrameworks` to use the new `databaseModule`. -   Refactor database driver setup to determine the local directory dynamically based on the operating system. -   Add logic to create necessary directories for the database if they don't exist. -   Update `AlmacenDbRepository` to get the db file from `DatabaseConstants`. -   Update `application.conf` to remove db path and name and add `ssl` config.
Signed-off-by: cocot3ro <pablooterocastro15@gmail.com>

--- a/almacen-service/src/main/resources/application.conf
+++ b/almacen-service/src/main/resources/application.conf
@@ -5,13 +5,15 @@ ktor {
 
   deployment {
     host = 127.0.0.1
-    port = 8081
+    sslPort = 8443
   }
-}
 
-almacen-service {
-  db {
-    path = ${LOCALAPPDATA}/GestionHotel/GH-Almacen
-    name = almacen.db
+  security {
+    ssl {
+      keyStore = ${ALMACEN_SERVICE_KEYSTORE}
+      keyAlias = ${ALMACEN_SERVICE_KEYSTORE_ALIAS}
+      keyStorePassword = ${ALMACEN_SERVICE_KEYSTORE_PASSWORD}
+      privateKeyPassword = ${ALMACEN_SERVICE_KEYSTORE_PRIVATE_KEY_PASSWORD}
+    }
   }
 }
