Refactor: Update core-shared and Ktor dependencies, adjust AlmacenResource and service configuration
-   Update `core-shared` module to version `1.0.0`
-   Add `core-shared-almacen-gateway` and `core-shared-network-resources` modules with version `1.0.0`
-   Update dependencies in `shared/build.gradle.kts` to include `core-shared-almacen-gateway`
-   Update `libs.versions.toml` to reflect changes in core-shared modules and add new dependencies
-   Remove unused status pages from Ktor dependencies
-   Refactor `AlmacenResource` to inherit from `ResourceRoute` instead of `Route`
-   Update `.gitignore` to remove `*.db`
-   Update `application.conf` in `almacen-service` to use only port, deleting ssl config
-   Update `almacen-service`'s `build.gradle.kts` to support development environment.

Signed-off-by: cocot3ro <pablooterocastro15@gmail.com>

--- a/almacen-service/src/main/resources/application.conf
+++ b/almacen-service/src/main/resources/application.conf
@@ -5,15 +5,6 @@ ktor {
 
   deployment {
     host = 127.0.0.1
-    sslPort = 8443
-  }
-
-  security {
-    ssl {
-      keyStore = ${ALMACEN_SERVICE_KEYSTORE}
-      keyAlias = ${ALMACEN_SERVICE_KEYSTORE_ALIAS}
-      keyStorePassword = ${ALMACEN_SERVICE_KEYSTORE_PASSWORD}
-      privateKeyPassword = ${ALMACEN_SERVICE_KEYSTORE_PRIVATE_KEY_PASSWORD}
-    }
+    port = 8081
   }
 }
