--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,31 +1,34 @@
 [versions]
-agp = "8.9.2"
-accompanistPermissions = "0.37.2"
+agp = "8.10.0"
+accompanistPermissions = "0.37.3"
 android-compileSdk = "35"
 android-minSdk = "29"
 android-targetSdk = "35"
 androidx-activityCompose = "1.10.1"
-androidx-lifecycle = "2.8.4"
+androidx-lifecycle = "2.9.0"
 barcodeScanning = "17.3.0"
 androidx-camera = "1.4.2"
-compose-multiplatform = "1.7.3"
-navigationCompose = "2.8.0-alpha12"
+compose-multiplatform = "1.8.1"
+coreSplashscreen = "1.0.1"
+navigationCompose = "2.9.0-beta02"
 junit = "4.13.2"
 kotlin = "2.1.20"
 kotlinx-coroutines = "1.10.1"
 kotlinxSerializationJson = "1.8.1"
-ktor = "3.1.2"
+ktor = "3.1.3"
 kotzilla = "1.0.1"
 koin = "4.0.4"
-koin-annotations = "2.0.0"
+koin-annotations = "2.0.1-RC1"
 logback = "1.5.18"
-sqldelight = "2.0.2"
-coil = "3.1.0"
+sqldelight = "2.1.0"
+coil = "3.2.0"
 ksp = "2.1.20-1.0.32"
-datastore = "1.1.4"
+datastore = "1.1.7"
+password4j = "1.8.3"
 
 
 [libraries]
+androidx-core-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "coreSplashscreen" }
 kotlin-test-junit = { module = "org.jetbrains.kotlin:kotlin-test-junit", version.ref = "kotlin" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activityCompose" }
@@ -34,6 +37,8 @@ androidx-lifecycle-runtime-compose = { group = "org.jetbrains.androidx.lifecycle
 kotlinx-coroutines-swing = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-swing", version.ref = "kotlinx-coroutines" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
 logback = { module = "ch.qos.logback:logback-classic", version.ref = "logback" }
+
+password4j = { module = "com.password4j:password4j", version.ref = "password4j" }
 
 kotzilla-plugin = { module = "io.kotzilla:kotzilla-plugin", version.ref = "kotzilla" }
 kotzilla-sdk-ktor3 = { module = "io.kotzilla:kotzilla-sdk-ktor3", version.ref = "kotzilla" }
@@ -48,23 +53,26 @@ androidx-camera-core = { module = "androidx.camera:camera-core", version.ref = "
 androidx-camera-camera2 = { module = "androidx.camera:camera-camera2", version.ref = "androidx-camera" }
 androidx-camera-lifecycle = { module = "androidx.camera:camera-lifecycle", version.ref = "androidx-camera" }
 androidx-camera-view = { module = "androidx.camera:camera-view", version.ref = "androidx-camera" }
+androidx-camera-extensions = { module = "androidx.camera:camera-extensions", version.ref = "androidx-camera" }
 
 navigation-compose = { module = "org.jetbrains.androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
 
 ktor-bom = { module = "io.ktor:ktor-bom", version.ref = "ktor" }
 ktor-serialization-kotlinx-json = { module = "io.ktor:ktor-serialization-kotlinx-json" }
 
-ktor-server-sse = { module = "io.ktor:ktor-server-sse" }
-ktor-server-core = { module = "io.ktor:ktor-server-core-jvm" }
-ktor-server-netty = { module = "io.ktor:ktor-server-netty-jvm" }
+ktor-server-core = { module = "io.ktor:ktor-server-core" }
+ktor-server-netty = { module = "io.ktor:ktor-server-netty" }
 ktor-server-resources = { module = "io.ktor:ktor-server-resources" }
+ktor-server-websockets = { module = "io.ktor:ktor-server-websockets" }
 ktor-server-content-negotiation = { module = "io.ktor:ktor-server-content-negotiation" }
-ktor-server-test-host = { module = "io.ktor:ktor-server-test-host-jvm" }
+ktor-server-test-host = { module = "io.ktor:ktor-server-test-host" }
 
-ktor-client-core = { module = "io.ktor:ktor-client-core-jvm" }
+ktor-client-core = { module = "io.ktor:ktor-client-core" }
+ktor-client-auth = { module = "io.ktor:ktor-client-auth" }
 ktor-client-okhttp = { module = "io.ktor:ktor-client-okhttp" }
-ktor-client-logging = { module = "io.ktor:ktor-client-logging-jvm" }
+ktor-client-logging = { module = "io.ktor:ktor-client-logging" }
 ktor-client-resources = { module = "io.ktor:ktor-client-resources" }
+ktor-client-websockets = { module = "io.ktor:ktor-client-websockets" }
 ktor-client-content-negotiation = { module = "io.ktor:ktor-client-content-negotiation" }
 
 koin-bom = { module = "io.insert-koin:koin-bom", version.ref = "koin" }
@@ -85,11 +93,14 @@ sqldelight-sqlite-driver = { module = "app.cash.sqldelight:sqlite-driver", versi
 sqldelight-primitive-adapters = { module = "app.cash.sqldelight:primitive-adapters", version.ref = "sqldelight" }
 sqldelight-coroutines-extensions = { module = "app.cash.sqldelight:coroutines-extensions", version.ref = "sqldelight" }
 
-coil-compose = { group = "io.coil-kt.coil3", name = "coil-compose", version.ref = "coil" }
-coil-network-ktor = { group = "io.coil-kt.coil3", name = "coil-network-ktor3", version.ref = "coil" }
+coil-bom = { module = "io.coil-kt.coil3:coil-bom", version.ref = "coil" }
+coil-compose = { group = "io.coil-kt.coil3", name = "coil-compose" }
+coil-network-ktor = { group = "io.coil-kt.coil3", name = "coil-network-ktor3" }
+coil-network-cache-control = { group = "io.coil-kt.coil3", name = "coil-network-cache-control" }
 
 core-shared = { module = "com.cocot3ro.gh.core:core-shared", version = "1.0.0" }
-core-shared-network-resources = { module = "com.cocot3ro.gh.core:core-shared-network-resources", version = "1.0.0" }
+core-network-resources = { module = "com.cocot3ro.gh.core:core-network-resources", version = "1.0.0" }
+core-network-model = { module = "com.cocot3ro.gh.core:core-network-model", version = "1.0.0" }
 
 
 [plugins]
@@ -108,18 +119,20 @@ kotzilla = { id = "io.kotzilla.kotzilla-plugin" }
 
 [bundles]
 ktor-server = [
-    "ktor-server-sse",
     "ktor-server-core",
     "ktor-server-netty",
     "ktor-server-resources",
+    "ktor-server-websockets",
     "ktor-server-content-negotiation"
 ]
 
 ktor-client = [
     "ktor-client-core",
+    "ktor-client-auth",
     "ktor-client-okhttp",
     "ktor-client-logging",
     "ktor-client-resources",
+    "ktor-client-websockets",
     "ktor-client-content-negotiation"
 ]
 
