--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,7 @@ barcodeScanning = "17.3.0"
 androidx-camera = "1.4.2"
 compose-multiplatform = "1.8.1"
 coreSplashscreen = "1.0.1"
+material = "1.12.0"
 navigationCompose = "2.9.0-beta02"
 junit = "4.13.2"
 kotlin = "2.1.20"
@@ -38,6 +39,7 @@ kotlinx-coroutines-swing = { group = "org.jetbrains.kotlinx", name = "kotlinx-co
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
 logback = { module = "ch.qos.logback:logback-classic", version.ref = "logback" }
 
+material = { module = "com.google.android.material:material", version.ref = "material" }
 password4j = { module = "com.password4j:password4j", version.ref = "password4j" }
 
 kotzilla-plugin = { module = "io.kotzilla:kotzilla-plugin", version.ref = "kotzilla" }
