--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,17 +13,17 @@ coreSplashscreen = "1.0.1"
 material = "1.12.0"
 navigationCompose = "2.9.0-beta02"
 junit = "4.13.2"
-kotlin = "2.1.20"
+kotlin = "2.1.21"
 kotlinx-coroutines = "1.10.1"
 kotlinxSerializationJson = "1.8.1"
 ktor = "3.1.3"
 kotzilla = "1.0.1"
 koin = "4.1.0"
-koin-annotations = "2.0.1-RC1"
+koin-annotations = "2.1.0"
 logback = "1.5.18"
 sqldelight = "2.1.0"
 coil = "3.2.0"
-ksp = "2.1.20-1.0.32"
+ksp = "2.1.21-2.0.2"
 datastore = "1.1.7"
 password4j = "1.8.3"
 
