--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,17 +15,13 @@ navigationCompose = "2.9.0-beta02"
 junit = "4.13.2"
 kotlin = "2.1.21"
 kotlinx-coroutines = "1.10.1"
-kotlinxSerializationJson = "1.8.1"
 ktor = "3.1.3"
 kotzilla = "1.0.1"
 koin = "4.1.0"
 koin-annotations = "2.1.0"
-logback = "1.5.18"
-sqldelight = "2.1.0"
 coil = "3.2.0"
 ksp = "2.1.21-2.0.2"
 datastore = "1.1.7"
-password4j = "1.8.3"
 
 
 [libraries]
@@ -36,11 +32,8 @@ androidx-activity-compose = { module = "androidx.activity:activity-compose", ver
 androidx-lifecycle-viewmodel = { group = "org.jetbrains.androidx.lifecycle", name = "lifecycle-viewmodel", version.ref = "androidx-lifecycle" }
 androidx-lifecycle-runtime-compose = { group = "org.jetbrains.androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "androidx-lifecycle" }
 kotlinx-coroutines-swing = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-swing", version.ref = "kotlinx-coroutines" }
-kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
-logback = { module = "ch.qos.logback:logback-classic", version.ref = "logback" }
 
 material = { module = "com.google.android.material:material", version.ref = "material" }
-password4j = { module = "com.password4j:password4j", version.ref = "password4j" }
 
 kotzilla-plugin = { module = "io.kotzilla:kotzilla-plugin", version.ref = "kotzilla" }
 kotzilla-sdk-ktor3 = { module = "io.kotzilla:kotzilla-sdk-ktor3", version.ref = "kotzilla" }
@@ -62,12 +55,6 @@ navigation-compose = { module = "org.jetbrains.androidx.navigation:navigation-co
 ktor-bom = { module = "io.ktor:ktor-bom", version.ref = "ktor" }
 ktor-serialization-kotlinx-json = { module = "io.ktor:ktor-serialization-kotlinx-json" }
 
-ktor-server-core = { module = "io.ktor:ktor-server-core" }
-ktor-server-netty = { module = "io.ktor:ktor-server-netty" }
-ktor-server-resources = { module = "io.ktor:ktor-server-resources" }
-ktor-server-websockets = { module = "io.ktor:ktor-server-websockets" }
-ktor-server-content-negotiation = { module = "io.ktor:ktor-server-content-negotiation" }
-ktor-server-test-host = { module = "io.ktor:ktor-server-test-host" }
 
 ktor-client-core = { module = "io.ktor:ktor-client-core" }
 ktor-client-auth = { module = "io.ktor:ktor-client-auth" }
@@ -78,11 +65,6 @@ ktor-client-websockets = { module = "io.ktor:ktor-client-websockets" }
 ktor-client-content-negotiation = { module = "io.ktor:ktor-client-content-negotiation" }
 
 koin-bom = { module = "io.insert-koin:koin-bom", version.ref = "koin" }
-koin-ktor = { module = "io.insert-koin:koin-ktor" }
-koin-logger-slf4j = { module = "io.insert-koin:koin-logger-slf4j" }
-koin-test = { module = "io.insert-koin:koin-test" }
-koin-test-junit = { module = "io.insert-koin:koin-test-junit4" }
-
 koin-core = { group = "io.insert-koin", name = "koin-core" }
 koin-android = { group = "io.insert-koin", name = "koin-android" }
 koin-compose = { group = "io.insert-koin", name = "koin-compose" }
@@ -90,10 +72,6 @@ koin-compose-viewmodel = { group = "io.insert-koin", name = "koin-compose-viewmo
 
 koin-annotations = { group = "io.insert-koin", name = "koin-annotations", version.ref = "koin-annotations" }
 koin-ksp-compiler = { group = "io.insert-koin", name = "koin-ksp-compiler", version.ref = "koin-annotations" }
-
-sqldelight-sqlite-driver = { module = "app.cash.sqldelight:sqlite-driver", version.ref = "sqldelight" }
-sqldelight-primitive-adapters = { module = "app.cash.sqldelight:primitive-adapters", version.ref = "sqldelight" }
-sqldelight-coroutines-extensions = { module = "app.cash.sqldelight:coroutines-extensions", version.ref = "sqldelight" }
 
 coil-bom = { module = "io.coil-kt.coil3:coil-bom", version.ref = "coil" }
 coil-compose = { group = "io.coil-kt.coil3", name = "coil-compose" }
@@ -104,6 +82,8 @@ core-shared = { module = "com.cocot3ro.gh.core:core-shared", version = "1.0.0" }
 core-network-resources = { module = "com.cocot3ro.gh.core:core-network-resources", version = "1.0.0" }
 core-network-model = { module = "com.cocot3ro.gh.core:core-network-model", version = "1.0.0" }
 
+almacen-service-network-model = { module = "com.cocot3ro.gh.almacen:almacen-service-network-model", version = "1.0.0" }
+almacen-service-network-resources = { module = "com.cocot3ro.gh.almacen:almacen-service-network-resources", version = "1.0.0" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
@@ -114,20 +94,11 @@ kotlinJvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 kotlin-plugin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 ktor = { id = "io.ktor.plugin", version.ref = "ktor" }
 kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
-sqldelight = { id = "app.cash.sqldelight", version.ref = "sqldelight" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 kotzilla = { id = "io.kotzilla.kotzilla-plugin" }
 
 
 [bundles]
-ktor-server = [
-    "ktor-server-core",
-    "ktor-server-netty",
-    "ktor-server-resources",
-    "ktor-server-websockets",
-    "ktor-server-content-negotiation"
-]
-
 ktor-client = [
     "ktor-client-core",
     "ktor-client-auth",
@@ -136,16 +107,6 @@ ktor-client = [
     "ktor-client-resources",
     "ktor-client-websockets",
     "ktor-client-content-negotiation"
-]
-
-koin-server = [
-    "koin-ktor",
-    "koin-logger-slf4j"
-]
-
-koin-test = [
-    "koin-test",
-    "koin-test-junit"
 ]
 
 koin-client = [
