--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,7 +30,7 @@ jobs:
         id: version
         shell: bash
         run: |
-          version=$(grep 'val version: String' build.gradle.kts | sed -E 's/.*"(.+)".*/\1/')
+          version=$(grep 'val version: String' composeApp/build.gradle.kts | sed -E 's/.*"(.+)".*/\1/')
           echo "VERSION=$version" >> $GITHUB_ENV
           echo "version=$version" >> $GITHUB_OUTPUT
 
