--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,9 @@ jobs:
         shell: bash
         run: |
           git clone https://github.com/cocot3ro/GestionHotel-Core
+          cd GestionHotel-Core
           ./gradlew publish
+          cd ..
           rm -rf GestionHotel-Core
 
       - name: Checkout code
