Configure Gradle in release workflow
The release workflow now includes a step to configure Gradle by creating a `gradle.properties` file with GitHub actor and token for authentication.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,6 +21,12 @@ jobs:
           distribution: 'temurin'
           java-version: 21
 
+      - name: Configure Gradle
+        run: |
+          mkdir -p ~/.gradle
+          echo "gpr.user=${{ github.actor }}" >> ~/.gradle/gradle.properties
+          echo "gpr.key=${{ secrets.GITHUB_TOKEN }}" >> ~/.gradle/gradle.properties
+
       - name: Decode keystore
         shell: bash
         run: echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 -d > keystore.jks
