Refactor: Integrate external dependencies for user and login services
This commit removes the local `shared` module and integrates external dependencies for user and login services.

Key changes:
- Removed the `shared` module and its associated build configuration.
- Updated `settings.gradle.kts` to remove the `shared` module inclusion.
- Replaced local user and login models and resources with their respective external library counterparts in:
    - `GhAlmacenClient.kt`
    - `NetworkRepository.kt`
    - `AlmacenLoginResponseModel.kt`
    - `AlmacenUserModel.kt`
    - `UserRoleModel.kt`
    - `AlmacenUserDomain.kt`
    - `UserRoleDomain.kt`
- Updated `gradle/libs.versions.toml` to include new dependencies for login and user services and grouped them under `gh-deps`.
- Updated `composeApp/build.gradle.kts` to:
    - Remove the `shared` project dependency.
    - Add the new `gh-deps` bundle.
    - Source keystore properties from `local.properties` as a fallback to environment variables.
    - Changed desktop native distribution target format to only MSI.
- Updated `GetAlmacenUsersUseCase.kt` to use the new external user model.
- Changed barcode scanner icon in `CreateItemBottomSheet.kt` to `barcode_reader_24dp.xml`.
- Added new icon `barcode_reader_24dp.xml`.

Ready for 1.0.0 release

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -77,11 +77,12 @@ coil-compose = { group = "io.coil-kt.coil3", name = "coil-compose" }
 coil-network-ktor = { group = "io.coil-kt.coil3", name = "coil-network-ktor3" }
 coil-network-cache-control = { group = "io.coil-kt.coil3", name = "coil-network-cache-control" }
 
-core-shared = { module = "com.cocot3ro.gh:core-shared", version = "1.0.0-SNAPSHOT" }
-core-network-resources = { module = "com.cocot3ro.gh:core-network-resources", version = "1.0.0-SNAPSHOT" }
-core-network-model = { module = "com.cocot3ro.gh:core-network-model", version = "1.0.0-SNAPSHOT" }
-almacen-service-network-model = { module = "com.cocot3ro.gh:almacen-service-network-model", version = "1.0.0-SNAPSHOT" }
-almacen-service-network-resources = { module = "com.cocot3ro.gh:almacen-service-network-resources", version = "1.0.0-SNAPSHOT" }
+login-service-network-model = { module = "com.cocot3ro.gh.deps:login-service-network-model", version = "1.0.0-SNAPSHOT" }
+login-service-network-resources = { module = "com.cocot3ro.gh.deps:login-service-network-resources", version = "1.0.0-SNAPSHOT" }
+users-service-network-model = { module = "com.cocot3ro.gh.deps:users-service-network-model", version = "1.0.0-SNAPSHOT" }
+users-service-network-resources = { module = "com.cocot3ro.gh.deps:users-service-network-resources", version = "1.0.0-SNAPSHOT" }
+almacen-service-network-model = { module = "com.cocot3ro.gh.deps:almacen-service-network-model", version = "1.0.0-SNAPSHOT" }
+almacen-service-network-resources = { module = "com.cocot3ro.gh.deps:almacen-service-network-resources", version = "1.0.0-SNAPSHOT" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
@@ -111,4 +112,13 @@ koin-client = [
     "koin-core",
     "koin-compose",
     "koin-compose-viewmodel"
+]
+
+gh-deps = [
+    "login-service-network-model",
+    "login-service-network-resources",
+    "users-service-network-model",
+    "users-service-network-resources",
+    "almacen-service-network-model",
+    "almacen-service-network-resources"
 ]
