Refactor: Update dependencies and remove unused code
- Updated dependencies:
    - compose-multiplatform to 1.8.2
    - navigationCompose to 2.9.0-beta04
    - kotlinx-coroutines to 1.10.2
    - coil to 3.3.0
- Removed unused user and store management functions from `NetworkRepository` and `GhAlmacenClient`.
- Refactored `EditItemViewModel` to use `MutableSet` for barcodes, improving encapsulation.
- Refactored `CargaDescargaViewModel` to use `MutableMap` for `cargaMap`, improving encapsulation.
- In `CargaDescargaScreen`:
    - Cleared search filter when selecting an item.
    - Made `LinearProgressIndicator` fill width.
    - Corrected sticky header usage in `LazyVerticalGrid`.
- Used `kotlin.time.Clock` instead of `kotlinx.datetime.Clock` in `CreateItemBottomSheet.kt` and `EditBottomSheet.kt`.
- Adjusted `versions.json` generation in the release workflow to reflect that desktop builds are not currently being produced.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -74,24 +74,14 @@ jobs:
             gh-almacen-v${{ steps.version.outputs.version }}.apk
 #            gh-almacen-v${{ steps.version.outputs.version }}.msi
 
-#      - name: Generate versions.json
-#        shell: bash
-#        run: |
-#          echo "{
-#            \"desktop\": {
-#              \"version\": \"${{ steps.version.outputs.version }}\",
-#              \"url\": \"https://github.com/${{ github.repository }}/releases/download/v${{ steps.version.outputs.version }}/gh-almacen-v${{ steps.version.outputs.version }}.msi\"
-#            },
-#            \"android\": {
-#              \"version\": \"${{ steps.version.outputs.version }}\",
-#              \"url\": \"https://github.com/${{ github.repository }}/releases/download/v${{ steps.version.outputs.version }}/gh-almacen-v${{ steps.version.outputs.version }}.apk\"
-#            }
-#          }" > versions.json
-
       - name: Generate versions.json
         shell: bash
         run: |
           echo "{
+            \"desktop\": {
+              \"version\": \"\",
+              \"url\": \"\"
+            },
             \"android\": {
               \"version\": \"${{ steps.version.outputs.version }}\",
               \"url\": \"https://github.com/${{ github.repository }}/releases/download/v${{ steps.version.outputs.version }}/gh-almacen-v${{ steps.version.outputs.version }}.apk\"
